--- a/contact.html
+++ b/contact.html
@@ -9,42 +9,42 @@
             <p class="col-2"></p>
             <h1 class="col-3">Corey Mitchell</h1>
             <p class="col-2"></p>
-            <button class="col-1">About</button>
-            <button class="col-1">Portfolio</button>
+            <button class="col-1" type="button" onclick="location.href='./index.html'">About</button>
+            <button class="col-1" type="button" onclick="location.href='./portfolio.html'">Portfolio</button>
             <button class="col-1">Contact</button>
             <p class="col-2"></p>
         </div>
 
         <div class="row">
-            <p class="col-2"></p>
-            <h2 class="col-3">Contact</h2>
+            <p class="col-md-2"></p>
+            <h2 class="col-md-3">Contact</h2>
         </div>
 
         <div class="row">
-            <p class="col-2"></p>
-            <div class="col-8">
+            <p class="col-md-2"></p>
+            <div class="col-md-8">
                 <p>Name:</p>
                 <input>
             </div>
-            <p class="col-2"></p>
+            <p class="col-md-2"></p>
         </div>
 
         <div class="row">
-                <p class="col-2"></p>
-                <div class="col-8">
+                <p class="col-md-2"></p>
+                <div class="col-md-8">
                     <p>Email:</p>
                     <input>
                 </div>
-                <p class="col-2"></p>
+                <p class="col-md-2"></p>
             </div>
 
             <div class="row">
-                    <p class="col-2"></p>
-                    <div class="col-8">
+                    <p class="col-md-2"></p>
+                    <div class="col-md-8">
                         <p>Message:</p>
                         <textarea maxlength="150"></textarea>
                     </div>
-                    <p class="col-2"></p>
+                    <p class="col-md-2"></p>
                 </div>
 
     </body>
