finished porfolio html, skeleton lined up.

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,10 +42,16 @@
 
             <p class="background-box">#</p>
 
-        <h2 id="portfolio">Portfolio</h2>
+    <div class="row">
+        <p class="col-md-2"></p>
+        <h2 class="col-md-8" id="portfolio">Portfolio</h2>
+        <p class="col-md-2"></p>
+    </div>
 
+    <div class="row">
+        <p class="col-md-2"></p>
             <a href="#">
-                <div class="img1div">
+                <div class="col-md-2" class="img1div">
 
                     <div id="img1">
                         <img src="assets/images/PHI1.jpg" alt="image placeholder" width="175" height="175">
@@ -58,7 +64,7 @@
             </a>
 
             <a href="#">    
-                <div class="img2div">
+                <div class="col-md-2" class="img2div">
 
                     <div id="img2">
                         <img src="assets/images/PHI2.jpg" alt="image placeholder" width="175" height="175">
@@ -73,7 +79,7 @@
             <a href="#">
                 <div class="img3div">
 
-                    <div id="img3">
+                    <div class="col-md-2" id="img3">
                         <img src="assets/images/PHI3.jpg" alt="image placeholder" width="175" height="175">
                     </div>
 
@@ -82,9 +88,14 @@
                     </div>
                 </div>
             </a>
+        <p class="col-md-2"></p>
+        <p class="col-md-2"></p>
+    </div>
 
+    <div class="row">
+        <p class="col-md-2"></p>
             <a href="#">
-                <div class="img4div">
+                <div class="col-md-2" class="img4div">
 
                     <div id="img4">
                         <img src="assets/images/PHI4.jpg" alt="image placeholder" width="175" height="175">
@@ -99,7 +110,7 @@
             <a href="#">
                 <div class="img5div">
 
-                    <div id="img5">
+                    <div class="col-md-2" id="img5">
                     <img src="assets/images/PHI5.jpg" alt="image placeholder" width="175" height="175">
                     </div>
         
@@ -109,10 +120,14 @@
                 </div>
             </a>
 
+        <p class="col-md-2"></p>
+        <p class="col-md-2"></p>
+        <p class="col-md-2"></p>
+    </div>
         </div>
      </div>
 
-            <footer class="footer">
+            <!-- <footer class="footer">
                 Now in Color!
 
                 <a href="https://www.linkedin.com/in/corey-mitchell-821489162/">
@@ -122,7 +137,7 @@
                 <a href="https://github.com/corey-mitchell">
                     <img src="./assets/images/GitHubIcon.jpg" alt="github icon" width="30" height="30">
                 </a>
-            </footer>
+            </footer> -->
 
     </body>
 </html>
