commiting changes for the night

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
     <div class="row">
         <p class="col-md-2"></p>
             <a href="#">
-                <div class="col-md-2" class="img1div">
+                <div class="col-sm-2" class="img1div">
 
                     <div id="img1">
                         <img src="assets/images/PHI1.jpg" alt="image placeholder" width="175" height="175">
@@ -64,7 +64,7 @@
             </a>
 
             <a href="#">    
-                <div class="col-md-2" class="img2div">
+                <div class="col-sm-2" class="img2div">
 
                     <div id="img2">
                         <img src="assets/images/PHI2.jpg" alt="image placeholder" width="175" height="175">
@@ -79,7 +79,7 @@
             <a href="#">
                 <div class="img3div">
 
-                    <div class="col-md-2" id="img3">
+                    <div class="col-sm-2" id="img3">
                         <img src="assets/images/PHI3.jpg" alt="image placeholder" width="175" height="175">
                     </div>
 
