--- a/contact.html
+++ b/contact.html
@@ -5,45 +5,52 @@
         <title>Portfolio</title>
         
         <link rel="stylesheet" href="assets/css/reset.css">    
-        <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+        <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     </head>
 
     <body>
         <div class="container">
-
             <div class="header">
-                <h1>Corey Mitchell</h1>
-
-                <!-- insert navbar -->
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <div id="header-name">
+                        <h1>Corey Mitchell</h1>
+                    </div>
+                </div>
+            <!-- insert navbar -->
             </div>
 
             <div class="jumbotron">
-                <div class="row">
-                    <h2>Contact</h2>
+                <div class="row" id="contact">
+                    <h2 class="col-lg-12 col-md-12 col-sm-12">Contact</h2>
                 </div>
 
                 <div class="row">
                     <div class="nameCdiv">
-                        <p>Name:</p>
-                        <input id="c-name-box" type="text" name="nametexbox" size="100">
+                        <p class="contact-text">Name:</p>
+                        <input id="c-name-box" type="text" name="nametexbox">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="emailCdiv">
-                        <p>Email:</p>
-                        <input id="c-name-box" type="text" name="nametexbox" size="100">
+                        <p class="contact-text">Email:</p>
+                        <input id="c-name-box" type="text" name="nametexbox">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="messageCdiv">
-                        <p>Message:</p>
+                        <p class="contact-text">Message:</p>
                         <textarea placeholder="Enter Message Here" id="c-message-box" name="nametexbox" maxlength="150"></textarea>
                     </div>
                 </div>
+
+                <div>
+                    <button>Submit</button>
+                </div>
             </div>
+
 
         </div>
 
