--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
     <head>
         <title>Portfolio</title>
+
+        <meta name="viewport" content="width = device-width, inital-scale = 1">
         
         <link rel="stylesheet" href="assets/css/reset.css">    
-        <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+        <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     </head>
 
@@ -13,27 +15,30 @@
         <div class="container">
 
             <div class="header">
-                <h1>Corey Mitchell</h1>
-
-                <!-- insert navbar -->
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <div id="header-name">
+                        <h1>Corey Mitchell</h1>
+                    </div>
+                </div>
+            <!-- insert navbar -->
             </div>
 
             <div class="jumbotron">
-                <div class="row">
-                    <h2>About Me</h2>
+                <div class="row" id="about">
+                    <h2 class="col-lg-12 col-md-12 col-sm-12">About Me</h2>
                 </div>
 
                 <div class="row">
                     <img class="col-md-2" id="me" src='./assets/images/me1.jpg' alt="picture of myself, Corey Mitchell" height="150">
-                    <p class="col-md-10">I am a musician at heart!  Music's slow transition to digital over analog led me to start making music through a digital interface and learning the intricacies of sound manipulation.  At some point, however, I realized some limitations within the interface and became curious on how I could push those limitations.  I then quickly discovered that in order to push any limits in a direction that I found desirable, I would have to learn how the program functioned and that is what brought me into the field of computer programming.</p>
+                    <p class="col-lg-10 col-md-10 col-sm-12 about-text">I am a musician at heart!  Music's slow transition to digital over analog led me to start making music through a digital interface and learning the intricacies of sound manipulation.  At some point, however, I realized some limitations within the interface and became curious on how I could push those limitations.  I then quickly discovered that in order to push any limits in a direction that I found desirable, I would have to learn how the program functioned and that is what brought me into the field of computer programming.</p>
                 </div>
 
                 <div class="row">
-                    <p>I have not been programming long, but the tediousness and constant troubleshooting actually feels much like creating music through a digital interface.  In a way, it feels familiar. As my instructor once said, "Art is hours of my time compressed into minutes for you".  This feeling is what made me want to purse programming as a career, a rewarding and creative outlet that is actually lucrative.</p>
+                    <p class="about-text">I have not been programming long, but the tediousness and constant troubleshooting actually feels much like creating music through a digital interface.  In a way, it feels familiar. As my instructor once said, "Art is hours of my time compressed into minutes for you".  This feeling is what made me want to purse programming as a career, a rewarding and creative outlet that is actually lucrative.</p>
                 </div>
 
                 <div class="row">
-                    <p>My ambition with web-development is to have a personal skill that I can apply in a professional and recreational environment, to further my career and my hobbies!</p>
+                    <p class="about-text">My ambition with web-development is to have a personal skill that I can apply in a professional and recreational environment, to further my career and my hobbies!</p>
                 </div>
 
 
