--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
         <title>Portfolio</title>
         
         <link rel="stylesheet" href="assets/css/reset.css">    
-        <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+        <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     </head>
 
@@ -13,14 +13,17 @@
         <div class="container">
 
             <div class="header">
-                <h1>Corey Mitchell</h1>
-
-                <!-- insert navbar -->
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <div id="header-name">
+                        <h1>Corey Mitchell</h1>
+                    </div>
+                </div>
+            <!-- insert navbar -->
             </div>
 
             <div class="jumbotron">
-                <div class="row">
-                    <h2>Portfolio</h2>
+                <div class="row" id="portfolio">
+                    <h2 class="col-lg-12 col-md-12 col-sm-12">Portfolio</h2>
                 </div>
 
                 <div class="row">
