--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
     <head>
         <title>Portfolio</title>
         
-        <link rel="stylesheet" href="assets/css/reset.css">    
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="assets/css/reset.css">     -->
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+            <link rel="stylesheet" href="assets/css/style.css">
     </head>
 
     <body>
-        <div class="container">
+        <div class="container" id="headerdiv">
             <div class="header">
                 <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                     <div id="header-name">
@@ -19,7 +19,9 @@
                 </div>
             <!-- insert navbar -->
             </div>
+        </div>
 
+        <div class="container" class="content">
             <div class="jumbotron">
                 <div class="row" id="contact">
                     <h2 class="col-lg-12 col-md-12 col-sm-12">Contact</h2>
@@ -28,21 +30,21 @@
                 <div class="row">
                     <div class="nameCdiv">
                         <p class="contact-text">Name:</p>
-                        <input id="c-name-box" type="text" name="nametexbox">
+                        <input class="col-lg-12 col-md-12 col-sm-6" id="c-name-box" type="text" name="nametexbox" size="100">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="emailCdiv">
                         <p class="contact-text">Email:</p>
-                        <input id="c-name-box" type="text" name="nametexbox">
+                        <input class="col-lg-12 col-md-12 col-sm-6" id="c-name-box" type="text" name="nametexbox" size="100">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="messageCdiv">
                         <p class="contact-text">Message:</p>
-                        <textarea placeholder="Enter Message Here" id="c-message-box" name="nametexbox" maxlength="150"></textarea>
+                        <textarea class="col-lg-12 col-md-12 col-sm-6" placeholder="Enter Message Here" id="c-message-box" name="nametexbox" maxlength="150"></textarea>
                     </div>
                 </div>
 
@@ -55,9 +57,9 @@
         </div>
 
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> 
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>  -->
 
     </body>
 </html>
