commiting and pushing for the night before I break something........

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <div class="container" class="content">
+        <div class="container" id="contentdiv">
             <div class="jumbotron">
                 <div class="row" id="contact">
                     <h2 class="col-lg-12 col-md-12 col-sm-12">Contact</h2>
