--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </head>
 
     <body>
-        <div class="container">
+        <div class="container" id="headerdiv">
+            <p class="col-lg-2 col-md-2 col-sm-3 col-xs-6" id="filler"></p>
 
             <div class="header">
                 <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
@@ -22,7 +23,9 @@
                 </div>
             <!-- insert navbar -->
             </div>
-            
+        </div>
+
+        <div class="container" id="contentdiv">    
             <div class="jumbotron">
                 <div class="row" id="about">
                     <h2 class="col-lg-12 col-md-12 col-sm-12">About Me</h2>
