--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <div class="container">
+        <div class="container" id="headerdiv">
 
             <div class="header">
                 <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
@@ -21,7 +21,9 @@
                 </div>
             <!-- insert navbar -->
             </div>
+        </div>
 
+        <div class="container" id="contentdiv">
             <div class="jumbotron">
                 <div class="row" id="portfolio">
                     <h2 class="col-lg-12 col-md-12 col-sm-12">Portfolio</h2>
@@ -29,7 +31,7 @@
 
                 <div class="row">
                     
-                    <div class="col-md-3" class="img1div">
+                    <div class="col-md-3" id="img1div">
                         <div id="img1">
                            <img src="assets/images/PHI1.jpg" alt="image placeholder" width="175" height="175">
                         </div>
@@ -42,7 +44,7 @@
                        
                     </div>
 
-                    <div class="col-md-3" class="img2div">
+                    <div class="col-md-3" id="img2div">
                         <div id="img2">
                             <img src="assets/images/PHI2.jpg" alt="image placeholder" width="175" height="175">
                         </div>
@@ -58,7 +60,7 @@
 
                 <div class="row"> 
 
-                    <div class="col-md-3" class="img3div">
+                    <div class="col-md-3" id="img3div">
                         <div id="img3">
                             <img src="assets/images/PHI3.jpg" alt="image placeholder" width="175" height="175">
                         </div>
@@ -70,7 +72,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3" class="img4div">
+                    <div class="col-md-3" id="img4div">
                         <div id="img4">
                             <img src="assets/images/PHI4.jpg" alt="image placeholder" width="175" height="175">
                         </div>
@@ -86,7 +88,7 @@
 
                 <div class="row">
 
-                    <div class="col-md-3" class="img5div">
+                    <div class="col-md-3" id="img5div">
                         <div id="img5">
                             <img src="assets/images/PHI5.jpg" alt="image placeholder" width="175" height="175">
                         </div>
