made sticky footer, I think I am done with this one.

--- a/contact.html
+++ b/contact.html
@@ -9,18 +9,19 @@
     </head>
 
     <body>
+<!-- Header -->
         <div class="container" id="headerdiv">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Corey Mitchell</a>
+                <a class="navbar-brand" href="./index.html" id="nav-name">Corey Mitchell</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="./index.html">About</a>
-                    </li>
+                    </li> -->
 
                     <li class="nav-item">
                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
@@ -34,8 +35,10 @@
             </nav>
         </div>
 
+<!-- Content -->
+
         <div class="container" id="contentdiv">
-            <div class="jumbotron">
+            <div class="jumbotron" id="conJT">
                 <div class="row" id="contact">
                     <h2 class="col-lg-12 col-md-12 col-sm-12">Contact</h2>
                 </div>
@@ -61,11 +64,22 @@
                     </div>
                 </div>
 
-                <div>
-                    <button>Submit</button>
+                <div id="sbmt-btn-div">
+                    <button id="submit-btn">Submit</button>
                 </div>
             </div>
+        </div>
 
+<!-- Footer -->
+
+        <div class="container">
+            <footer class="footer" id="sticky-footer">
+                <div class="container">
+                    <span>Find Me Here!</span>
+                    <img src="./assets/images/LIpic.png" href="https://www.linkedin.com/in/corey-mitchell-821489162/" width="20">
+                    <img src="./assets/images/GitHubIcon.jpg" href="https://github.com/corey-mitchell" width="20">
+                </div>
+            </footer>
 
         </div>
 
