--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     </head>
 
     <body>
+<!-- Header -->
         <div class="container" id="headerdiv">
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Corey Mitchell</a>
+                <a class="navbar-brand" href="./index.html" id="nav-name">Corey Mitchell</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,9 +35,9 @@
                         <a class="dropdown-item" href="./contact.html">Contact</a>
                       </div> -->
 
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="./index.html">About</a>
-                    </li>
+                    </li> -->
 
                     <li class="nav-item">
                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
@@ -51,6 +52,8 @@
             </nav>
             
         </div>
+
+<!-- Content -->
 
         <div class="container" id="contentdiv">    
             <div class="jumbotron">
@@ -73,6 +76,19 @@
 
 
             </div>
+
+        </div>
+
+<!-- Footer -->
+
+        <div class="container">
+            <footer class="footer" id="sticky-footer">
+                <div class="container">
+                    <span>Find Me Here!</span>
+                    <img src="./assets/images/LIpic.png" href="https://www.linkedin.com/in/corey-mitchell-821489162/" width="20">
+                    <img src="./assets/images/GitHubIcon.jpg" href="https://github.com/corey-mitchell" width="20">
+                </div>
+            </footer>
 
         </div>
 
