added first two projects to portfolio. fixed navbar and footer a bit.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <body>
 <!-- Header -->
-        <div class="container" id="headerdiv">
+        <div id="headerdiv">
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="./index.html" id="nav-name">Corey Mitchell</a>
+                <a class="navbar-brand" id="nav-name">Corey Mitchell</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -35,9 +35,9 @@
                         <a class="dropdown-item" href="./contact.html">Contact</a>
                       </div> -->
 
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link" href="./index.html">About</a>
-                    </li> -->
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
@@ -80,8 +80,6 @@
         </div>
 
 <!-- Footer -->
-
-        <div class="container">
             <footer class="footer" id="sticky-footer">
                 <div class="container">
                     <span>Find Me Here!</span>
@@ -89,10 +87,6 @@
                     <img src="./assets/images/GitHubIcon.jpg" href="https://github.com/corey-mitchell" width="20">
                 </div>
             </footer>
-
-        </div>
-
-
 
        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
