--- a/contact.html
+++ b/contact.html
@@ -10,18 +10,18 @@
 
     <body>
 <!-- Header -->
-        <div class="container" id="headerdiv">
+        <div id="headerdiv">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="./index.html" id="nav-name">Corey Mitchell</a>
+                <a class="navbar-brand" id="nav-name">Corey Mitchell</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link" href="./index.html">About</a>
-                    </li> -->
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
@@ -72,7 +72,7 @@
 
 <!-- Footer -->
 
-        <div class="container">
+        <div>
             <footer class="footer" id="sticky-footer">
                 <div class="container">
                     <span>Find Me Here!</span>
