trying to get image to display

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
                     
                     <div class="col-md-3" id="img1div">
                         <div id="img1">
-                           <img src="assets/images/psychic-game-img.png" alt="image placeholder" width="175" height="175">
+                           <img src="./assets/images/psychic-game-img.png" alt="image placeholder" width="175" height="175">
                         </div>
                         
                         <div id="ph1">
