created a content div to replace misuse of jumbotron, also fixed footer.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <head>
         <title>Portfolio</title>
 
-        <meta name="viewport" content="width = device-width, inital-scale = 1">
+        <!-- For the dropdown nav bar -->
+        <!-- <meta name="viewport" content="width = device-width, inital-scale = 1"> -->
          
+        <!-- CSS Elements -->
+        <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">   
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
@@ -55,8 +58,8 @@
 
 <!-- Content -->
 
-        <div class="container" id="contentdiv">    
-            <div class="jumbotron">
+        <div class="container">    
+            <div class="contentDiv">
                 <div class="row" id="about">
                     <h2 class="col-lg-12 col-md-12 col-sm-12">About Me</h2>
                 </div>
@@ -81,7 +84,7 @@
 
 <!-- Footer -->
             <footer class="footer" id="sticky-footer">
-                <div class="container">
+                <div>
                     <span>Find Me Here!</span>
                     <img src="./assets/images/LIpic.png" href="https://www.linkedin.com/in/corey-mitchell-821489162/" width="20">
                     <img src="./assets/images/GitHubIcon.jpg" href="https://github.com/corey-mitchell" width="20">
