--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <head>
         <title>Portfolio</title>
         
+            <!-- CSS Elements -->
+            <link rel="stylesheet" href="assets/css/reset.css">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
             <link rel="stylesheet" href="assets/css/style.css">
     </head>
@@ -37,8 +39,8 @@
 
 <!-- Content -->
 
-        <div class="container" id="contentdiv">
-            <div class="jumbotron" id="conJT">
+        <div class="container">
+            <div id="conJT" class="contentDiv">
                 <div class="row" id="contact">
                     <h2 class="col-lg-12 col-md-12 col-sm-12">Contact</h2>
                 </div>
