--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,8 @@
     <head>
         <title>Portfolio</title>
         
+        <!-- CSS Elements -->
+        <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
@@ -38,8 +40,8 @@
 
 <!-- Content -->
 
-        <div class="container" id="contentdiv">
-            <div class="jumbotron">
+        <div class="container">
+            <div class="contentDiv">
                 <div class="row" id="portfolio">
                     <h2 class="col-lg-12 col-md-12 col-sm-12">Portfolio</h2>
                 </div>
