--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 <!-- Content -->
 
         <div class="container">
-            <div class="contentDiv">
+            <div class="contentDiv" id="pfContentDiv">
                 <div class="row" id="portfolio">
                     <h2 class="col-lg-12 col-md-12 col-sm-12">Portfolio</h2>
                 </div>
