--- a/portfolio.html
+++ b/portfolio.html
@@ -91,12 +91,12 @@
 
                     <div class="col-md-3" id="img4div">
                         <div id="img4">
-                            <img src="assets/images/PHI4.jpg" alt="image placeholder" width="175" height="175">
+                            <img src="assets/images/Ajax.PNG" alt="Giphy Api Image" width="175" height="175">
                         </div>
                                  
                         <div id="ph4">
-                            <a href="#" class="PLlinks">
-                                <h3>Placeholder</h3>
+                            <a href="https://corey-mitchell.github.io/unit-6-assignment/" class="PLlinks">
+                                <h3>Giphy API</h3>
                             </a>
                         </div>
                     </div>
