--- a/Version 2/index.html
+++ b/Version 2/index.html
@@ -55,7 +55,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" id="myPhoto" src="img/Webp.net-resizeimage.png" alt="">
         <h1 class="text-uppercase mb-0">Corey Mitchell</h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">Web Developer - Music Producer - All Around Fun Guy!</h2>
@@ -105,7 +105,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
+              <img class="img-fluid" src="img/portfolio/crystals.gif" alt="Crystal Floating in Hands GIF">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -115,7 +115,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+              <img class="img-fluid" src="img/portfolio/train.gif" alt="Train GIF">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -125,7 +125,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
+              <img class="img-fluid" src="img/portfolio/psychic.gif" alt="Ms. Tenor GIF">
             </a>
           </div>
         </div>
@@ -210,12 +210,12 @@
     <footer class="footer text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 mb-5 mb-lg-0">
+          <div class="col-md-6 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Location</h4>
-            <p class="lead mb-0">2215 John Daniel Drive
-              <br>Clark, MO 65243</p>
+            <p class="lead mb-0">305 E. Yager Ln
+              <br>Austin, TX 78753</p>
           </div>
-          <div class="col-md-4 mb-5 mb-lg-0">
+          <div class="col-md-6 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Around the Web</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
@@ -245,11 +245,11 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <h4 class="text-uppercase mb-4">About Freelancer</h4>
             <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
               <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-          </div>
+          </div> -->
         </div>
       </div>
     </footer>
@@ -281,7 +281,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Giphy API</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/Ajax.gif" alt="Giphy API GIF">
-              <p class="mb-5">This project is an anime GIF generator that utilizes Giphy's API. There is a list of animes that are pregenerated, but you may type in your own to see what comes up. Don't feel obligated to limit yourself to anime, play around and see what cool GIFs you can discover!</p>
+              <p class="mb-5">This project is an anime GIF generator that utilizes Giphy's API. There is a list of animes that are pregenerated, but you may submit your own to see what comes up. Don't feel obligated to limit yourself to anime, play around and see what cool GIFs you can discover!</p>
               <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/unit-6-assignment/" target="_blank">Open Project</a>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
@@ -304,7 +304,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Anime Trivia Game</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/Trivia.gif" alt="Anime Character Annoyed by Resposibilities GIF">
-              <p class="mb-5">Test your anime knowledge with this anime trivia game!</p>
+              <p class="mb-5">Test your anime knowledge with this Anime Trivia Game!</p>
               <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/TriviaGame/" target="_blank">Open Project</a>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
@@ -318,16 +318,16 @@
     <!-- Portfolio Modal 3 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
       <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+        <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
-        </a>
+        </a> -->
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Spotify Movie Playlist</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/Spotify-MP.gif" alt="Spotify Logo GIF">
-              <p class="mb-5">Utilizes OMDb API to find soundtrack info from user submitted movie then creates a spotify playlist out of said tracklist.</p>
+              <p class="mb-5">Utilizes OMDb API to find soundtrack info from user submitted movie then creates a spotify playlist out of said tracklist. You MUST have a Spotify account to use this application.</p>
               <a class="btn btn-primary btn-lg rounded-pill" href="https://project-1-hackers.github.io/Project-1-BootCamp/?mode=select" target="_blank">Open Project</a>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
@@ -341,16 +341,17 @@
     <!-- Portfolio Modal 4 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
       <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+        <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
-        </a>
+        </a> -->
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Crystals Collector</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <img class="img-fluid mb-5" src="img/portfolio/crystals.gif" alt="Crystal Floating in Hands GIF">
+              <p class="mb-5">Click on the crystals and try to add their values together to match the randomly generated number. Good Luck!</p>
+              <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/unit-4-game/" target="_blank">Open Project</a>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -363,16 +364,17 @@
     <!-- Portfolio Modal 5 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
       <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+        <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
-        </a>
+        </a> -->
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Train Scheduler</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/safe.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <img class="img-fluid mb-5" src="img/portfolio/train.gif" alt="train GIF">
+              <p class="mb-5">This project was made to learn Firebase as well as Moment.JS. The user submits a train name, destination and starting time and it gets added to the Firebase DB. Moment.JS then converts the time from military to standard and displays how many minutes until the next train will arrive as well as the time that the train should be arriving.</p>
+              <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/Firebase-Assignment/" target="_blank">Open Project</a>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -385,16 +387,17 @@
     <!-- Portfolio Modal 6 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
       <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+        <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
-        </a>
+        </a> -->
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Psychic Game</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/submarine.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <img class="img-fluid mb-5" src="img/portfolio/psychic.gif" alt="Ms. Tenor GIF">
+              <p class="mb-5">This is a simple letter guessing game, press a letter to try and guess the letter that the computer has generated. It is very basic because it is the very first thing I ever made with JavaScript so forgive the lack of zazz. It won't be up here long, I am working on a hangman style game to replace it.</p>
+              <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/Psychic-Game/" target="_blank">Open Project</a>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
