finally fixed issues... I hope

--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
             <form name="sentMessage" id="contactForm" action="https://formspree.io/corey.waitforit.mitchell@gmail.com" novalidate="novalidate" method="POST">
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
@@ -219,44 +218,24 @@
             <h4 class="text-uppercase mb-4">Around the Web</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fa fa-fw fa-facebook"></i>
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://github.com/corey-mitchell" target="_blank">
+                  <i class="fa fa-fw fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fa fa-fw fa-google-plus"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fa fa-fw fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/corey-mitchell-821489162/" target="_blank">
                   <i class="fa fa-fw fa-linkedin"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fa fa-fw fa-dribbble"></i>
                 </a>
               </li>
             </ul>
           </div>
-          <!-- <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Freelancer</h4>
-            <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
-              <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-          </div> -->
         </div>
       </div>
     </footer>
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Your Website 2018</small>
+        <small>Copyright &copy; Corey Mitchell 2018</small>
       </div>
     </div>
 
@@ -295,9 +274,6 @@
     <!-- Portfolio Modal 2 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-2">
       <div class="portfolio-modal-dialog bg-white">
-        <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a> -->
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -318,9 +294,6 @@
     <!-- Portfolio Modal 3 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
       <div class="portfolio-modal-dialog bg-white">
-        <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a> -->
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -341,9 +314,6 @@
     <!-- Portfolio Modal 4 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
       <div class="portfolio-modal-dialog bg-white">
-        <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a> -->
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -364,9 +334,6 @@
     <!-- Portfolio Modal 5 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
       <div class="portfolio-modal-dialog bg-white">
-        <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a> -->
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -387,9 +354,6 @@
     <!-- Portfolio Modal 6 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
       <div class="portfolio-modal-dialog bg-white">
-        <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a> -->
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
