fixed up About Me section

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
             <p class="lead">I am a musician at heart!  Music's slow transition to digital over analog led me to start making music through a digital interface and learning the intricacies of sound manipulation.  At some point, however, I realized some limitations within the interface and became curious on how I could push those limitations.  I then quickly discovered that in order to push any limits in a direction that I found desirable, I would have to learn how the program functioned and that is what brought me into the field of computer programming.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">I have not been programming long, but the tediousness and constant troubleshooting actually feels much like creating music through a digital interface.  In a way, it feels familiar. As my instructor once said, "Art is hours of my time compressed into minutes for you".  This feeling is what made me want to purse programming as a career, a rewarding and creative outlet that is actually lucrative! Sign me up!</p>
+            <p class="lead">The tediousness and constant troubleshooting actually feels much like creating music through a digital interface.  In a way, it felt as though I had been doing it my whole life. As my instructor once said, "Art is hours of my time compressed into minutes for you".  This feeling is what made me want to pursue programming as a career, a rewarding and creative outlet that is actually lucrative! Sign me up!</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">My ambition with web-development is to have a personal skill that I can apply in a professional and recreational environment, to further my career and my hobbies!</p>
+            <p class="lead">My ambition with web development is to have a personal skill that I can apply in a professional and recreational environment, to further my career and my hobbies!</p>
           </div>
         </div>
         <!-- <div class="text-center mt-4">
