added friend finder, deleted psychic game from portfolio section.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/psychic.gif" alt="Ms. Tenor GIF">
+              <img class="img-fluid" src="https://media.giphy.com/media/3o72Fis1cjDIyky9yM/giphy.gif" alt="Best friends in graves GIF">
             </a>
           </div>
         </div>
@@ -357,11 +357,11 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Psychic Game</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Friend Finder</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/psychic.gif" alt="Ms. Tenor GIF">
-              <p class="mb-5">This is a simple letter guessing game, press a letter to try and guess the letter that the computer has generated. It is very basic because it is the very first thing I ever made with JavaScript so forgive the lack of zazz. It won't be up here long, I am working on a hangman style game to replace it.</p>
-              <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/Psychic-Game/" target="_blank">Open Project</a>
+              <img class="img-fluid mb-5" src="https://media.giphy.com/media/3o72Fis1cjDIyky9yM/giphy.gif" alt="Best Friends in graves GIF">
+              <p class="mb-5">Answer a short ten question survey and be matched up with a new friend!</p>
+              <a class="btn btn-primary btn-lg rounded-pill" href="https://friend-finder-supreme.herokuapp.com/" target="_blank">Open Project</a>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
