fixed picture ratio

--- a/index.html
+++ b/index.html
@@ -125,9 +125,19 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="https://media.giphy.com/media/3o72Fis1cjDIyky9yM/giphy.gif" alt="Best friends in graves GIF">
+              <img class="img-fluid" src="img/portfolio/friends2.gif" alt="Mac and cheese friends with benefits GIF">
             </a>
           </div>
+          <!-- <div class="col-md-6 col-lg-4">
+            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-7">
+              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="https://media.giphy.com/media/3o72Fis1cjDIyky9yM/giphy.gif" alt="Best friends in graves GIF">
+            </a>
+          </div> -->
         </div>
       </div>
     </section>
@@ -353,6 +363,26 @@
 
     <!-- Portfolio Modal 6 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
+      <div class="portfolio-modal-dialog bg-white">
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <h2 class="text-secondary text-uppercase mb-0">Friend Finder</h2>
+              <hr class="star-dark mb-5">
+              <img class="img-fluid mb-5" src="img/portfolio/friends2.gif" alt="Mac and Cheese friends with benefits GIF">
+              <p class="mb-5">Answer a short ten question survey and be matched up with a new friend!</p>
+              <a class="btn btn-primary btn-lg rounded-pill" href="https://friend-finder-supreme.herokuapp.com/" target="_blank">Open Project</a>
+              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                <i class="fa fa-close"></i>
+                Close Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Portfolio Modal 7 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-7">
       <div class="portfolio-modal-dialog bg-white">
         <div class="container text-center">
           <div class="row">
