added new project to portfolio, deleted dumb train app from class.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/Trivia.gif" alt="Anime Character Annoyed by Resposibilities GIF">
+              <img class="img-fluid" src="img/portfolio/news.gif" alt="Breaking News GIF">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -105,7 +105,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/Ajax.gif" alt="Giphy API GIF">
+              <img class="img-fluid" src="img/portfolio/Trivia.gif" alt="Anime Character Annoyed by Resposibilities GIF">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -115,7 +115,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/crystals.gif" alt="Crystal Floating in Hands GIF">
+              <img class="img-fluid" src="img/portfolio/Ajax.gif" alt="Giphy API GIF">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -125,7 +125,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/train.gif" alt="Train GIF">
+              <img class="img-fluid" src="img/portfolio/crystals.gif" alt="Crystal Floating in Hands GIF">
             </a>
           </div>
           <!-- <div class="col-md-6 col-lg-4">
@@ -260,49 +260,69 @@
 
     <!-- Portfolio Modal 1 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
-        <div class="portfolio-modal-dialog bg-white">
-          <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-            <i class="fa fa-3x fa-times"></i>
-          </a> -->
-          <div class="container text-center">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <h2 class="text-secondary text-uppercase mb-0">Spotify Movie Playlist</h2>
-                <hr class="star-dark mb-5">
-                <img class="img-fluid mb-5" src="img/portfolio/Spotify-MP.gif" alt="Spotify Logo GIF">
-                <p class="mb-5">Utilizes OMDb API to find soundtrack info from user submitted movie then creates a spotify playlist out of said tracklist. You MUST have a Spotify account to use this application.</p>
-                <a class="btn btn-primary btn-lg rounded-pill" href="https://project-1-hackers.github.io/Project-1-BootCamp/?mode=select" target="_blank">Open Project</a>
-                <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                  <i class="fa fa-close"></i>
-                  Close Project</a>
-              </div>
+      <div class="portfolio-modal-dialog bg-white">
+        <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+          <i class="fa fa-3x fa-times"></i>
+        </a> -->
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <h2 class="text-secondary text-uppercase mb-0">Spotify Movie Playlist</h2>
+              <hr class="star-dark mb-5">
+              <img class="img-fluid mb-5" src="img/portfolio/Spotify-MP.gif" alt="Spotify Logo GIF">
+              <p class="mb-5">Utilizes OMDb API to find soundtrack info from user submitted movie then creates a spotify playlist out of said tracklist. You MUST have a Spotify account to use this application.</p>
+              <a class="btn btn-primary btn-lg rounded-pill" href="https://project-1-hackers.github.io/Project-1-BootCamp/?mode=select" target="_blank">Open Project</a>
+              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                <i class="fa fa-close"></i>
+                Close Project</a>
             </div>
           </div>
         </div>
       </div>
-  
-      <!-- Portfolio Modal 2 -->
-      <div class="portfolio-modal mfp-hide" id="portfolio-modal-2">
-        <div class="portfolio-modal-dialog bg-white">
-          <div class="container text-center">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <h2 class="text-secondary text-uppercase mb-0">Friend Finder</h2>
-                <hr class="star-dark mb-5">
-                <img class="img-fluid mb-5" src="img/portfolio/friends2.gif" alt="Mac and Cheese friends with benefits GIF">
-                <p class="mb-5">Answer a short ten question survey and be matched up with a new friend!</p>
-                <a class="btn btn-primary btn-lg rounded-pill" href="https://friend-finder-supreme.herokuapp.com/" target="_blank">Open Project</a>
-                <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                  <i class="fa fa-close"></i>
-                  Close Project</a>
-              </div>
+    </div>
+
+    <!-- Portfolio Modal 2 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-2">
+      <div class="portfolio-modal-dialog bg-white">
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <h2 class="text-secondary text-uppercase mb-0">Friend Finder</h2>
+              <hr class="star-dark mb-5">
+              <img class="img-fluid mb-5" src="img/portfolio/friends2.gif" alt="Mac and Cheese friends with benefits GIF">
+              <p class="mb-5">Answer a short ten question survey and be matched up with a new friend!</p>
+              <a class="btn btn-primary btn-lg rounded-pill" href="https://friend-finder-supreme.herokuapp.com/" target="_blank">Open Project</a>
+              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                <i class="fa fa-close"></i>
+                Close Project</a>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
     <!-- Portfolio Modal 3 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
+      <div class="portfolio-modal-dialog bg-white">
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <h2 class="text-secondary text-uppercase mb-0">KXAN Article Scraper</h2>
+              <hr class="star-dark mb-5">
+              <img class="img-fluid mb-5" src="img/portfolio/news.gif" alt="Breaking News GIF">
+              <p class="mb-5">This application scrapes current Ausin local news from KXAN and stores the articles in a database. It stores the article, along with the article link and a short summary of the article, and allows the user to save, comment on or delete the current articles.</p>
+              <a class="btn btn-primary btn-lg rounded-pill" href="https://austin-news-webscraper.herokuapp.com/" target="_blank">Open Project</a>
+              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                <i class="fa fa-close"></i>
+                Close Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Portfolio Modal 4 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
       <div class="portfolio-modal-dialog bg-white">
         <div class="container text-center">
           <div class="row">
@@ -321,8 +341,8 @@
       </div>
     </div>
 
-    <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
+    <!-- Portfolio Modal 5 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
         <div class="portfolio-modal-dialog bg-white">
           <div class="container text-center">
             <div class="row">
@@ -341,8 +361,8 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
+    <!-- Portfolio Modal 6 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
       <div class="portfolio-modal-dialog bg-white">
         <div class="container text-center">
           <div class="row">
@@ -352,26 +372,6 @@
               <img class="img-fluid mb-5" src="img/portfolio/crystals.gif" alt="Crystal Floating in Hands GIF">
               <p class="mb-5">Click on the crystals and try to add their values together to match the randomly generated number. Good Luck!</p>
               <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/unit-4-game/" target="_blank">Open Project</a>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Portfolio Modal 6 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
-      <div class="portfolio-modal-dialog bg-white">
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Train Scheduler</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/train.gif" alt="train GIF">
-              <p class="mb-5">This project was made to learn Firebase as well as Moment.JS. The user submits a train name, destination and starting time and it gets added to the Firebase DB. Moment.JS then converts the time from military to standard and displays how many minutes until the next train will arrive as well as the time that the train should be arriving.</p>
-              <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/Firebase-Assignment/" target="_blank">Open Project</a>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
